# loggibud

./: .flake8  .gitignore  .mypy  .task1_results.csv.swp  .task1_results_temp_second_attempt.csv.swp  .vimrc  LICENSE  README.md  convert_all_data_files.py  create_tsplib_regions.py  download.sh  execute_task1.py  generate.py  generateCsv.py  generateCsvVehicles.py  generate_task1.py  generation.md  includeVehicles.py  osrm.md  output.rar  pyproject.toml  requirements.txt  run_experiments.py  run_experiments_task1.py  run_experiments_task1_2.py  run_experiments_task2.py  task1_2_results.csv  task1_results_lkh_ortools.csv  task1_results_temp.csv  task1_results_temp_aux.csv  task1_results_temp_first_attempt.csv  task1_results_temp_second_attempt.csv  task2_results.csv  task2_results_temp.csv  vrp_input_temp.par
.github/workflows/: python-app.yml
docs/: loggibud_univesp.md  osrm.md  quickstart.md  workshop_pbp_loggi.rst
loggibud/: README.md  distances.py
loggibud/cvrp/: eval.py  plot_instance.py  types.py
loggibud/instance_generation/: download.sh  generate.py  generators.py  preprocessing.py
loggibud/shared/: distances.py  p_hub.py  types.py
loggibud/v1/: data_conversion.py  distances.py  types.py  workspace.code-workspace
output/kmeans_aggregation_ortools/: cvrp-0-df-0.json  cvrp-0-df-1.json  cvrp-0-df-10.json  cvrp-0-df-11.json  cvrp-0-df-12.json  cvrp-0-df-13.json  cvrp-0-df-14.json  cvrp-0-df-15.json  cvrp-0-df-16.json  cvrp-0-df-17.json  cvrp-0-df-18.json  cvrp-0-df-19.json  cvrp-0-df-2.json  cvrp-0-df-20.json  cvrp-0-df-21.json  cvrp-0-df-22.json  cvrp-0-df-23.json  cvrp-0-df-24.json  cvrp-0-df-25.json  cvrp-0-df-26.json  cvrp-0-df-27.json  cvrp-0-df-28.json  cvrp-0-df-3.json  (+67 more)
results/: task1_results.csv
tests/: test_cvrp_baselines.py  test_cvrp_generation.py  test_instance_generation.py
(+220 files in other folders)
