[tool.poetry]
name = "loggibud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
attrs = "==20.2.0"
certifi = "==2020.6.20"
chardet = "==3.0.4"
click = "==7.1.2"
click-plugins = "==1.1.1"
cligj = "==0.7.0"
idna = "==2.10"
joblib = "==0.17.0"
munch = "==2.5.0"
numpy = "==1.19.3"
ortools = "==8.0.8283"
pandas = "==1.1.4"
protobuf = "==3.13.0"
python-dateutil = "==2.8.1"
pytz = "==2020.1"
requests = "==2.24.0"
scikit-learn = "==0.23.2"
Shapely = "==1.7.1"
six = "==1.15.0"
sklearn = "==0.0"
threadpoolctl = "==2.1.0"
tqdm = "==4.51.0"
urllib3 = "==1.25.11"
dacite = "^1.6.0"
geopandas = "^0.8.1"
scipy = "^1.6.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
