[tool.poetry]
name = "loggibud"
version = "0.1.0"
description = "Real-world benchmarks for urban delivery problems, including vehicle routing and facility location problems."
authors = ["Gabriela Surita <gsurita@loggi.com>", "Fillipe Goulart <fillipe.mendes@loggi.com>", "Juan Camilo <juan.camilo@loggi.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = "^1.20.2"
requests = "^2.25.1"
dacite = "^1.6.0"
tqdm = "^4.60.0"
ortools = "^8.2.8710"
sklearn = "^0.0"
Shapely = "^1.7.1"
pandas = "^1.2.3"
geopandas = "^0.9.0"
folium = "^0.12.1"
polyline = "^1.4.0"
lkh = "^1.0.4"
tsplib95 = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mock = "^4.0.3"
ipdb = "^0.13.7"
flake8 = "^3.9.0"
black = "^21.4b0"

[tool.black]
line-length = 79
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

